Introduce new parser concept